--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,3 +1,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.none {
+  // pointer-events: none;
+  background-color: red;
+}
+
+.black {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  &__pawn {
+    background-image: url("./images/black/black_pawn.png");
+  }
+  &__rook {
+    background-image: url("./images/black/black_rook.png");
+  }
+  &__knight {
+    background-image: url("./images/black/black_knight.png");
+  }
+  &__bishop {
+    background-image: url("./images/black/black_bishop.png");
+  }
+  &__queen {
+    background-image: url("./images/black/black_queen.png");
+  }
+  &__king {
+    background-image: url("./images/black/black_king.png");
+  }
+}
+
+.white {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  &__pawn {
+    background-image: url("./images/white/white_pawn.png");
+  }
+  &__rook {
+    background-image: url("./images/white/white_rook.png");
+  }
+  &__knight {
+    background-image: url("./images/white/white_knight.png");
+  }
+  &__bishop {
+    background-image: url("./images/white/white_bishop.png");
+  }
+  &__queen {
+    background-image: url("./images/white/white_queen.png");
+  }
+  &__king {
+    background-image: url("./images/white/white_king.png");
+  }
+}
